[>] Launch from terminal